# MarketAgents

./: .env.example  .gitignore  README.md  anthropic_caching_docs.md  database.db  datagen.py  datagen_salesforce.py  main.py  project.md  pyproject.toml  references.bib  requirements.txt  run_simulation.sh  setup.py  simulation_log.txt  start_market_agents.sh
TARS_discordagent/: api_client.py  bot.py  cache_manager.py  config.py  github_utils.py  inverted_index.py  logging_config.py  main.py  principles.md  readme.md  repo_processor.py  system_prompts.yaml
abstractions/: __init__.py
abstractions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_pkgs/buyer_agent/: pyproject.toml
agent_pkgs/buyer_agent/buyer_agent/: component.yaml  run.py  schemas.py
agent_tools/: financial_rag.py
app/: main.py
cognitive_modules/: cognition_modules.md
datagenie/: .env.example  .gitignore  Makefile  README.md  redis_schema.yaml  run_datagen.sh  run_vectordb.sh
demo/: llm_matched.py  llm_vs_zi_exploration.py  zi_exploration.py  zi_exploration_single_thread.py
docs/: todo.md
examples/: 01_basic_agent.py  02_cognitive_steps_agent.py  03_knowledge_base_agent.py  04_environment_integration.py  05_basic_team_collaboration.py  06_hierarchical_team.py  07_research_team.py  08_structured_tools.py  09_mcp_server_environment.py  10_multi_environment_orchestration.py  11_market_agent_swarm.py  12_workflow_example.py  13_customer_journey_team.py  anthropic_caching.md  auction_example.py  basic_agent.py  beauty_contest_example.py  cache_example.py  chat_app_test.py  crypto_sentiment_workflow.py  customer_support_agent.py  db_creation.py  econ_agents_notebook.ipynb  equilibrium_da_example.py  equilibrium_example.py  extraction_agent.ipynb  forge.py  forge_example.py  group_chat_example.2py  group_chat_example.py  group_chat_example2.py  groupchat_example3.py  groupchat_parallel_orchestrator.py  groupchat_with_human_mode.py  groupchat_with_humanmode(gradio).py  groupchat_with_humanmode_gradio.py  hedge_fund_team.py  investment_research_workflow.py  knowledge_agent.ipynb  lite_llm_iri_test.py  (+26 more)
information_board/: checklist.md  dashboard.py
llm_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1715 files in other folders)
