[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "market_agents"
version = "0.1.0"
description = "Economic agent simulation with crypto capabilities"
authors = ["interstellarninja <ninjainterstellar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "2.8.2"
pandas = "2.2.2"
matplotlib = "3.9.2"
dash = "2.17.1"
anthropic = "0.34.1"
openai = "1.42.0"
python-dotenv = "1.0.1"
pydantic-settings = "2.5.2"
colorama = "0.4.6"
names = "0.3.0"
tiktoken = "0.7.0"
pyfiglet = "1.0.2"
aiohttp = "*"
scipy = "*"
fastapi = "*"
uvicorn = "*"
eth-account = "0.13.4"
