[project]
name = "market-agents"
version = "0.1.0"
description = "A multi-agent orchestration framework for market agents"
authors = [
    {name = "interstellarninja", email = "ninjainterstellar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2,<7.0.0",
    "pydantic>=2.10.5,<3.0.0",
    "openai>=1.59.7,<2.0.0",
    "anthropic==0.45.2",
    "tiktoken>=0.8.0,<0.9.0",
    "tenacity>=9.0.0,<10.0.0",
    "aiohttp>=3.11.11,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "names>=0.3.0,<0.4.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "fastapi>=0.115.6,<0.116.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pyfiglet>=1.0.2,<2.0.0",
    "rich>=13.9.4,<14.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["market_agents*", "minference*"]